Fix Sidebar Bottom on Small Screens

--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -151,7 +151,7 @@
 
     .sidebar {
         border: none;
-        bottom: 0;
+        bottom: 0 !important;
     }
 
     .collapseSidebar {
